tests/ui/const-generics/issues/issue-67945-2.full.stderr
error: overly complex generic constant
  --> $DIR/issue-67945-2.rs:7:13
   |
LL |       A: [(); {
   |  _____________^
LL | |
LL | |         let x: Option<Box<Self>> = None;
...  |
LL | |     }],
   | |_____^ blocks are not supported in generic constants
   |
   = help: consider moving this anonymous constant into a `const` function
   = note: this operation may be supported in the future

error: aborting due to 1 previous error

